--- a/06_ES6_Babel_Browserify/package.json
+++ b/06_ES6_Babel_Browserify/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1"
+  },
+  "dependencies": {
+    "jquery": "^1.12.4"
   }
 }
